added gh pages to deploy sample app on github pages

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "parcel": "^2.15.4"
   },
   "name": "react-cdn",
   "version": "1.0.0",
   "description": "React CDN app boot up",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "repository": {
     "type": "git",
@@ -17,5 +21,5 @@
   "bugs": {
     "url": "https://github.com/rakshkash/react-cdn-sample/issues"
   },
-  "homepage": "https://github.com/rakshkash/react-cdn-sample#readme"
+  "homepage": "https://github.com/rakshkash/react-cdn-sample"
 }
